--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
     <nav id="header" class="navbar navbar-inverse">
         <ul class="nav navbar-nav">
-            <li><a href="/user">View all users</a></li>
+            <li><a href="/#/user">View all users</a></li>
             <li><a href="/user/create">Add new user</a></li>
             <li><a href="/book">View all books</a></li>
             <li><a href="/book/create">Add new book</a></li>
@@ -29,17 +29,19 @@
 
     </div>
 </div>
+
 <script type="text/html" id="user-tr">
     <td><%- firstname %></td>
     <td><%- lastname %></td>
     <td><%- email %></td>
-    <td><a href="#" class="btn btn-small btn-success js-show">Show</a>
-        <a href="#" class="btn btn-small btn-warning js-edit">Edit</a>
-        <a href="#" class="btn btn-small btn-default js-give">Give a free book</a>
-        <a href="#" class="btn btn-small btn-danger pull-right js-delete">Delete</a>
+    <td><button class="btn btn-small btn-success js-show">Show</button>
+        <button class="btn btn-small btn-warning js-edit">Edit</button>
+        <button class="btn btn-small btn-default js-give">Give a free book</button>
+        <button class="btn btn-small btn-danger pull-right js-delete">Delete</button>
 
     </td>
 </script>
+
 <script type="text/html" id="table-template">
 
     <thead>
@@ -56,11 +58,29 @@
 
 </script>
 
+<script type="text/html" id="user-view">
+        <div class="form-group">
+            <label for="">First Name</label>
+            <input class="form-control" readonly="readonly" name="firstname" type="text" value="<%- firstname %>">
+        </div>
+        <div class="form-group">
+            <label for="">Last Name</label>
+            <input class="form-control" readonly="readonly" name="lastname" type="text" value="<%- lastname %>">
+        </div>
+
+        <div class="form-group">
+            <label for="">Email</label>
+            <input class="form-control" readonly="readonly" name="email" type="text" value="<%- email %>">
+        </div>
+        <button class="btn btn-primary">Edit</button>
+</script>
 
 <script src="/src/js/app.js"></script>
+<script src="/src/js/users/users_app.js"></script>
 <script src="/src/js/entities/user.js"></script>
 <script src="/src/js/users/users_view.js"></script>
 <script src="/src/js/users/users_controller.js"></script>
+
 
 
 <script type="application/javascript">
@@ -80,7 +100,7 @@
     //        itemViewContainer: 'tbody'
     //    });
 
-    Library.start();
+    app.start();
 </script>
 </body>
 </html>
